feat: added rock spawner app, with discovery and registration as an R cluster entry point