@@ -11,14 +11,12 @@
 package org.obiba.opal.web.app;
 
 import com.google.common.base.Strings;
-import org.obiba.opal.core.domain.AppConfig;
 import org.obiba.opal.core.domain.AppCredentials;
 import org.obiba.opal.core.domain.AppsConfig;
 import org.obiba.opal.core.domain.RockAppConfig;
+import org.obiba.opal.core.domain.RockSpawnerAppConfig;
 import org.obiba.opal.core.runtime.App;
 import org.obiba.opal.web.model.Apps;
-
-import java.util.stream.Collectors;
 
 public class Dtos {
 
@@ -43,7 +41,10 @@ public class Dtos {
         .setToken(config.getToken())
         .addAllRockConfigs(config.getRockAppConfigs().stream()
             .map(Dtos::asDto)
-            .collect(Collectors.toList()))
+            .toList())
+        .addAllRockSpawnerConfigs(config.getRockSpawnerAppConfigs().stream()
+            .map(Dtos::asDto)
+            .toList())
         .build();
   }
 
@@ -55,6 +56,13 @@ public class Dtos {
       builder.setManagerCredentials(asDto(config.getManagerCredentials()));
     if (config.hasUserCredentials())
       builder.setUserCredentials(asDto(config.getUserCredentials()));
+    return builder.build();
+  }
+
+  public static Apps.RockSpawnerAppConfigDto asDto(RockSpawnerAppConfig config) {
+    Apps.RockSpawnerAppConfigDto.Builder builder = Apps.RockSpawnerAppConfigDto.newBuilder().setHost(config.getHost());
+    if (config.hasToken())
+      builder.setToken(config.getToken());
     return builder.build();
   }
 
@@ -81,7 +89,10 @@ public class Dtos {
     config.setToken(dto.getToken());
     config.setRockAppConfigs(dto.getRockConfigsList().stream()
         .map(Dtos::fromDto)
-        .collect(Collectors.toList()));
+        .toList());
+    config.setRockSpawnerAppConfigs(dto.getRockSpawnerConfigsList().stream()
+        .map(Dtos::fromDto)
+        .toList());
     return config;
   }
 
@@ -93,6 +104,13 @@ public class Dtos {
       config.setManagerCredentials(fromDto(dto.getManagerCredentials()));
     if (dto.hasUserCredentials())
       config.setUserCredentials(fromDto(dto.getUserCredentials()));
+    return config;
+  }
+
+  public static RockSpawnerAppConfig fromDto(Apps.RockSpawnerAppConfigDto dto) {
+    RockSpawnerAppConfig config = new RockSpawnerAppConfig(dto.getHost());
+    if (dto.hasToken())
+      config.setToken(dto.getToken());
     return config;
   }
 
